infra/zagreb/notary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notary
spec:
  selector:
    app: notary
  ports:
  - port: 4443
    targetPort: 4443
